--- a/high-dimension-visualizer.html
+++ b/high-dimension-visualizer.html
@@ -10,15 +10,15 @@ body {
 }
 
 h1 {
-	font-size: 120%
+	font-size: 100%;
+	display: inline;
 }
 </style>
 </head>
 <body>
 	<h1>High Dimension Visualizer</h1>
-	<p>By Ritchie Thai. Originally created on 2012-07-28. Last updated on 2012-08-12</p>
-	<p>This is a hypercube. Use the W, A, S, D, and the arrow keys to change the the camera's 4 dimensional position.
-	I'd like to add controls for camera direction later, which should be when things really get trippy.</p>
+	By Ritchie Thai. Originally made: 2012-07-28. This is a hypercube.<br />
+	Keys to move the 4D camera: arrow keys, W, A, S, D, 1, 2, 3, 4, 5, 6, 7, 8, 9, 0, -, =. <br />
 	<canvas id="canvas" width="800" height="600" style="border: 1px solid #ffffff;"></canvas>
 <script type="text/javascript">
 (function () {
@@ -58,7 +58,8 @@ h1 {
 		calcMagnitudeOfVector,
 		multiplyScalarWithVector;
 
-	init = function () {
+	var resetCamera = function () {
+		cameraPosition = [175, 100, 150, 30];
 		cameraRotation[0] = [];
 		cameraRotation[1] = [];
 		cameraRotation[2] = [];
@@ -68,13 +69,20 @@ h1 {
 		cameraRotation[1][2] = ROTATION_SPEED * 3;
 		cameraRotation[1][3] = ROTATION_SPEED * 2;
 		cameraRotation[2][3] = 0;
+	};
 
+	init = function () {
 		document.onkeydown = actOnKeyDown;
 		document.onkeypress = actOnKeyPress;
+	
+		resetCamera();
 		drawShape();
+	
+		playRecordedDemoActionsStartingAt(0);
 	};
 	
 	actOnKeyDown = function (event) {
+		console.log("[actOnKeyDown, " + event.keyCode + "],");
 		if (event.keyCode === 38) { // up
 			cameraPosition[1] += SPEED;
 		} else if (event.keyCode === 40) { // down
@@ -90,7 +98,7 @@ h1 {
 	};
 	
 	actOnKeyPress = function (event) {
-		console.log(event.charCode);
+		console.log("[actOnKeyPress, " + event.charCode + "],");
 		if (event.charCode === 119) { // W
 			cameraPosition[0] -= SPEED;
 		} else if (event.charCode === 115) { // S
@@ -325,6 +333,1745 @@ h1 {
 			result[i] = scalar * vector[i];
 		}
 		return result;
+	};
+	
+	var recordedDemoActions = [[actOnKeyDown, 61],
+
+
+
+[actOnKeyPress, 61],
+
+
+
+[actOnKeyDown, 61],
+
+
+
+[actOnKeyPress, 61],
+
+
+
+[actOnKeyDown, 61],
+
+
+
+[actOnKeyPress, 61],
+
+
+
+[actOnKeyDown, 61],
+
+
+
+[actOnKeyPress, 61],
+
+
+
+[actOnKeyDown, 61],
+
+
+
+[actOnKeyPress, 61],
+
+
+
+[actOnKeyDown, 61],
+
+
+
+[actOnKeyPress, 61],
+
+
+
+[actOnKeyDown, 61],
+
+
+
+[actOnKeyPress, 61],
+
+
+
+[actOnKeyDown, 61],
+
+
+
+[actOnKeyPress, 61],
+
+
+
+[actOnKeyDown, 61],
+
+
+
+[actOnKeyPress, 61],
+
+
+
+[actOnKeyDown, 61],
+
+
+
+[actOnKeyPress, 61],
+
+
+
+[actOnKeyDown, 61],
+
+
+
+[actOnKeyPress, 61],
+
+
+
+[actOnKeyDown, 48],
+
+
+
+[actOnKeyPress, 48],
+
+
+
+[actOnKeyDown, 48],
+
+
+
+[actOnKeyPress, 48],
+
+
+
+[actOnKeyDown, 48],
+
+
+
+[actOnKeyPress, 48],
+
+
+
+[actOnKeyDown, 48],
+
+
+
+[actOnKeyPress, 48],
+
+
+
+[actOnKeyDown, 48],
+
+
+
+[actOnKeyPress, 48],
+
+
+
+[actOnKeyDown, 48],
+
+
+
+[actOnKeyPress, 48],
+
+
+
+[actOnKeyDown, 48],
+
+
+
+[actOnKeyPress, 48],
+
+
+
+[actOnKeyDown, 48],
+
+
+
+[actOnKeyPress, 48],
+
+
+
+[actOnKeyDown, 48],
+
+
+
+[actOnKeyPress, 48],
+
+
+
+[actOnKeyDown, 48],
+
+
+
+[actOnKeyPress, 48],
+
+
+
+[actOnKeyDown, 48],
+
+
+
+[actOnKeyPress, 48],
+
+
+
+[actOnKeyDown, 48],
+
+
+
+[actOnKeyPress, 48],
+
+
+
+[actOnKeyDown, 48],
+
+
+
+[actOnKeyPress, 48],
+
+
+
+[actOnKeyDown, 65],
+
+
+
+[actOnKeyPress, 97],
+
+
+
+[actOnKeyDown, 68],
+
+
+
+[actOnKeyPress, 100],
+
+
+
+[actOnKeyDown, 68],
+
+
+
+[actOnKeyPress, 100],
+
+
+
+[actOnKeyDown, 68],
+
+
+
+[actOnKeyPress, 100],
+
+
+
+[actOnKeyDown, 68],
+
+
+
+[actOnKeyPress, 100],
+
+
+
+[actOnKeyDown, 68],
+
+
+
+[actOnKeyPress, 100],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 65],
+
+
+
+[actOnKeyPress, 97],
+
+
+
+[actOnKeyDown, 65],
+
+
+
+[actOnKeyPress, 97],
+
+
+
+[actOnKeyDown, 65],
+
+
+
+[actOnKeyPress, 97],
+
+
+
+[actOnKeyDown, 65],
+
+
+
+[actOnKeyPress, 97],
+
+
+
+[actOnKeyDown, 48],
+
+
+
+[actOnKeyPress, 48],
+
+
+
+[actOnKeyDown, 48],
+
+
+
+[actOnKeyPress, 48],
+
+
+
+[actOnKeyDown, 48],
+
+
+
+[actOnKeyPress, 48],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 65],
+
+
+
+[actOnKeyPress, 97],
+
+
+
+[actOnKeyDown, 65],
+
+
+
+[actOnKeyPress, 97],
+
+
+
+[actOnKeyDown, 65],
+
+
+
+[actOnKeyPress, 97],
+
+
+
+[actOnKeyDown, 65],
+
+
+
+[actOnKeyPress, 97],
+
+
+
+[actOnKeyDown, 65],
+
+
+
+[actOnKeyPress, 97],
+
+
+
+[actOnKeyDown, 65],
+
+
+
+[actOnKeyPress, 97],
+
+
+
+[actOnKeyDown, 65],
+
+
+
+[actOnKeyPress, 97],
+
+
+
+[actOnKeyDown, 61],
+
+
+
+[actOnKeyPress, 61],
+
+
+
+[actOnKeyDown, 61],
+
+
+
+[actOnKeyPress, 61],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 87],
+
+
+
+[actOnKeyPress, 119],
+
+
+
+[actOnKeyDown, 40],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 40],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 51],
+
+
+
+[actOnKeyPress, 51],
+
+
+
+[actOnKeyDown, 51],
+
+
+
+[actOnKeyPress, 51],
+
+
+
+[actOnKeyDown, 51],
+
+
+
+[actOnKeyPress, 51],
+
+
+
+[actOnKeyDown, 51],
+
+
+
+[actOnKeyPress, 51],
+
+
+
+[actOnKeyDown, 51],
+
+
+
+[actOnKeyPress, 51],
+
+
+
+[actOnKeyDown, 51],
+
+
+
+[actOnKeyPress, 51],
+
+
+
+[actOnKeyDown, 51],
+
+
+
+[actOnKeyPress, 51],
+
+
+
+[actOnKeyDown, 51],
+
+
+
+[actOnKeyPress, 51],
+
+
+
+[actOnKeyDown, 51],
+
+
+
+[actOnKeyPress, 51],
+
+
+
+[actOnKeyDown, 55],
+
+
+
+[actOnKeyPress, 55],
+
+
+
+[actOnKeyDown, 55],
+
+
+
+[actOnKeyPress, 55],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 87],
+
+
+
+[actOnKeyPress, 119],
+
+
+
+[actOnKeyDown, 40],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 57],
+
+
+
+[actOnKeyPress, 57],
+
+
+
+[actOnKeyDown, 57],
+
+
+
+[actOnKeyPress, 57],
+
+
+
+[actOnKeyDown, 173],
+
+
+
+[actOnKeyPress, 45],
+
+
+
+[actOnKeyDown, 173],
+
+
+
+[actOnKeyPress, 45],
+
+
+
+[actOnKeyDown, 48],
+
+
+
+[actOnKeyPress, 48],
+
+
+
+[actOnKeyDown, 48],
+
+
+
+[actOnKeyPress, 48],
+
+
+
+[actOnKeyDown, 48],
+
+
+
+[actOnKeyPress, 48],
+
+
+
+[actOnKeyDown, 48],
+
+
+
+[actOnKeyPress, 48],
+
+
+
+[actOnKeyDown, 48],
+
+
+
+[actOnKeyPress, 48],
+
+
+
+[actOnKeyDown, 48],
+
+
+
+[actOnKeyPress, 48],
+
+
+
+[actOnKeyDown, 48],
+
+
+
+[actOnKeyPress, 48],
+
+
+
+[actOnKeyDown, 40],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 40],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 40],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 40],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 40],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 40],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 40],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 40],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 40],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 40],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 40],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 40],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 40],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 40],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 83],
+
+
+
+[actOnKeyPress, 115],
+
+
+
+[actOnKeyDown, 65],
+
+
+
+[actOnKeyPress, 97],
+
+
+
+[actOnKeyDown, 65],
+
+
+
+[actOnKeyPress, 97],
+
+
+
+[actOnKeyDown, 65],
+
+
+
+[actOnKeyPress, 97],
+
+
+
+[actOnKeyDown, 65],
+
+
+
+[actOnKeyPress, 97],
+
+
+
+[actOnKeyDown, 65],
+
+
+
+[actOnKeyPress, 97],
+
+
+
+[actOnKeyDown, 65],
+
+
+
+[actOnKeyPress, 97],
+
+
+
+[actOnKeyDown, 65],
+
+
+
+[actOnKeyPress, 97],
+
+
+
+[actOnKeyDown, 65],
+
+
+
+[actOnKeyPress, 97],
+
+
+
+[actOnKeyDown, 65],
+
+
+
+[actOnKeyPress, 97],
+
+
+
+[actOnKeyDown, 65],
+
+
+
+[actOnKeyPress, 97],
+
+
+
+[actOnKeyDown, 65],
+
+
+
+[actOnKeyPress, 97],
+
+
+
+[actOnKeyDown, 65],
+
+
+
+[actOnKeyPress, 97],
+
+
+
+[actOnKeyDown, 65],
+
+
+
+[actOnKeyPress, 97],
+
+
+
+[actOnKeyDown, 65],
+
+
+
+[actOnKeyPress, 97],
+
+
+
+[actOnKeyDown, 87],
+
+
+
+[actOnKeyPress, 119],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 173],
+
+
+
+[actOnKeyPress, 45],
+
+
+
+[actOnKeyDown, 61],
+
+
+
+[actOnKeyPress, 61],
+
+
+
+[actOnKeyDown, 52],
+
+
+
+[actOnKeyPress, 52],
+
+
+
+[actOnKeyDown, 52],
+
+
+
+[actOnKeyPress, 52],
+
+
+
+[actOnKeyDown, 52],
+
+
+
+[actOnKeyPress, 52],
+
+
+
+[actOnKeyDown, 52],
+
+
+
+[actOnKeyPress, 52],
+
+
+
+[actOnKeyDown, 53],
+
+
+
+[actOnKeyPress, 53],
+
+
+
+[actOnKeyDown, 53],
+
+
+
+[actOnKeyPress, 53],
+
+
+
+[actOnKeyDown, 53],
+
+
+
+[actOnKeyPress, 53],
+
+
+
+[actOnKeyDown, 53],
+
+
+
+[actOnKeyPress, 53],
+
+
+
+[actOnKeyDown, 53],
+
+
+
+[actOnKeyPress, 53],
+
+
+
+[actOnKeyDown, 53],
+
+
+
+[actOnKeyPress, 53],
+
+
+
+[actOnKeyDown, 53],
+
+
+
+[actOnKeyPress, 53],
+
+
+
+[actOnKeyDown, 53],
+
+
+
+[actOnKeyPress, 53],
+
+
+
+[actOnKeyDown, 53],
+
+
+
+[actOnKeyPress, 53],
+
+
+
+[actOnKeyDown, 53],
+
+
+
+[actOnKeyPress, 53],
+
+
+
+[actOnKeyDown, 53],
+
+
+
+[actOnKeyPress, 53],
+
+
+
+[actOnKeyDown, 55],
+
+
+
+[actOnKeyPress, 55],
+
+
+
+[actOnKeyDown, 55],
+
+
+
+[actOnKeyPress, 55],
+
+
+
+[actOnKeyDown, 87],
+
+
+
+[actOnKeyPress, 119],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0],
+
+
+
+[actOnKeyDown, 38],
+
+
+
+[actOnKeyPress, 0]];
+
+	var playRecordedDemoActionsStartingAt = function (actionIndex) {
+		var recordedAction = recordedDemoActions[actionIndex];
+		recordedAction[0]({charCode: recordedAction[1], keyCode: recordedAction[1]});
+		if (actionIndex + 1 < recordedDemoActions.length) {
+			setTimeout(function () {
+				playRecordedDemoActionsStartingAt(actionIndex + 1);
+			}, 20);
+		} else {
+			resetCamera();
+			drawShape();
+		}
 	};
 
 	init();
